--- a/Tarefa01_Mateus_Batista_Almeida/src/components/Card.css
+++ b/Tarefa01_Mateus_Batista_Almeida/src/components/Card.css
@@ -17,6 +17,7 @@ button.card {
     padding: 10px;
     border-radius: 10px;
     transition: box-shadow 0.3s ease;
+    position: relative; /* 👈 ESSENCIAL */
 }
 
 button.card.expandido {
@@ -33,13 +34,12 @@ button.card.expandido {
 }
 
 .ampliada {
-    position: absolute;
-    left: 10%;
-    bottom: 0;
-    width: 300px;
+    width: 250px;
     height: auto;
-    margin-top: 10px;
     border-radius: 10px;
+    object-fit: cover;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    margin-top: 10px;
 }
 
 figure {
