--- a/Tarefa01_Mateus_Batista_Almeida/src/components/Galeria.css
+++ b/Tarefa01_Mateus_Batista_Almeida/src/components/Galeria.css
@@ -1,11 +1,12 @@
-
 .galeria {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     border-radius: 10px;
-    border: 2px solid black ;
+    border: 2px solid black;
     background-color: rgb(202, 27, 27);
-    width: 98%;
-    height: 40%;
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
     padding: 10px;
 }
